fixed vertical scroll on mobile

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -7,4 +7,6 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #C7102F;
+    margin: 0;
+    overflow: hidden;
 }
